[gd_scene load_steps=2 format=3 uid="uid://b5lx7453wbk23"]

[ext_resource type="Script" uid="uid://c7nf7g0rrgxpa" path="res://scripts/main_menu/GameMenu.gd" id="1"]

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9)

[node name="CenterWrap" type="CenterContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Frame" type="Panel" parent="CenterWrap"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1040, 600)
layout_mode = 2

[node name="Row" type="HBoxContainer" parent="CenterWrap/Frame"]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="LeftTabs" type="VBoxContainer" parent="CenterWrap/Frame/Row"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="Content" type="VBoxContainer" parent="CenterWrap/Frame/Row"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="PanelHolder" type="Control" parent="CenterWrap/Frame/Row/Content"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
